syntax = "proto3";

option java_outer_classname = "StorageApiResWrapper";

message StorageApiRes {
  // 错误码
  string errorCode = 1;
  // 错误信息
  string errorMsg = 2;
  // 追加消息响应
  PutMsgRes putMsgRes = 3;
  // 拉取消息响应
  FetchMsgRes fetchMsgRes = 4;

}

// 追加消息响应
message PutMsgRes {

  // 消息偏移量
  int64 offset = 1;

  // 消息id
  string msgId = 2;
}

// 拉取消息响应
message FetchMsgRes {

  // 没有更多的数据标识
  bool alreadyLastOffset = 1;

  // 拉取到的数据
  repeated bytes data = 2;

  // 拉取到的数据最后的offset
  int64 fetchLastOffset = 3;

}